第一次提交到github

--- a/app/src/main/res/layout/activity_publish.xml
+++ b/app/src/main/res/layout/activity_publish.xml
@@ -60,6 +60,7 @@
                         android:id="@+id/et_pub_phone"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:inputType="phone"
                         android:layout_weight="7" />
                 </LinearLayout>
 
@@ -79,6 +80,27 @@
 
                     <EditText
                         android:id="@+id/et_pub_businessTime"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="7" />
+                </LinearLayout>
+
+                <include layout="@layout/line" />
+
+                <!--tag-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="@string/pub_xml_tag" />
+
+                    <EditText
+                        android:id="@+id/et_pub_tag"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="7" />
@@ -113,58 +135,93 @@
 
                 <include layout="@layout/line" />
 
-                <LinearLayout
-                    android:id="@+id/pub_layout_images"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginTop="5dp" />
-                <!--photo-->
-                <RelativeLayout
-                    android:id="@+id/pub_takePhoto_layout"
-                    android:layout_gravity="center_vertical"
-                    android:layout_width="wrap_content"
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
-                    android:background="@color/light_grey">
-
-                    <ImageView
-                        android:id="@+id/pub_takePhoto"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/ic_image_black_24dp" />
-                </RelativeLayout>
-
-
-                <include layout="@layout/line" />
-
-                <!--文本上传-->
-                <RelativeLayout
-                    android:id="@+id/pub_layout_uploadText"
-                    android:layout_width="wrap_content"
+                     >
+                    <LinearLayout
+                        android:id="@+id/pub_layout_images"
+                        android:layout_width="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content"/>
+                </HorizontalScrollView>
+                <LinearLayout
+                    android:id="@+id/pub_layout_media"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginTop="5dp">
-
-                    <ImageView
-                        android:id="@+id/pub_icon_uploadText"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:layout_marginBottom="5dp"
-                        android:background="@color/light_grey"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/ic_insert_drive_file_black_24dp" />
-
-                    <TextView
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+                    <!--photo-->
+                    <RelativeLayout
+                        android:id="@+id/pub_takePhoto_layout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/pub_icon_uploadText"
-                        android:gravity="center_vertical"
-                        android:text="@string/pub_xml_uploadText" />
-                </RelativeLayout>
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginTop="5dp">
+
+                        <ImageView
+                            android:id="@+id/pub_takePhoto"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:layout_marginBottom="5dp"
+                            android:background="@color/light_grey"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/ic_image_black_24dp" />
+
+                        <TextView
+                            android:layout_width="60dp"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/pub_takePhoto"
+                            android:gravity="center"
+
+                            android:text="@string/pub_xml_takeImg" />
+                    </RelativeLayout>
+
+                    <!--编辑文本-->
+                    <RelativeLayout
+                        android:id="@+id/pub_layout_writerFile"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="5dp">
+
+                        <ImageView
+                            android:id="@+id/pub_icon_writerFile"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:layout_marginBottom="5dp"
+                            android:background="@color/light_grey"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/ic_writer_file_24dp" />
+
+                        <TextView
+                            android:layout_width="60dp"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/pub_icon_writerFile"
+                            android:gravity="center"
+                            android:text="@string/pub_xml_writerFile" />
+                    </RelativeLayout>
+                </LinearLayout>
+
+                <include layout="@layout/line" />
+                <TextView
+                    android:id="@+id/tev"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
             </LinearLayout>
         </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:indeterminate="false"
+        android:layout_centerInParent="true" />
 </android.support.design.widget.CoordinatorLayout>
