--- a/app/src/main/res/layout/fragment_comment_input.xml
+++ b/app/src/main/res/layout/fragment_comment_input.xml
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="10dp"
+    android:background="@color/light_grey"
+    >
+    <EditText
+        android:id="@+id/et_input"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:hint="输入你的评论吧"
+        android:minLines="5"
+        android:gravity="top"
+        android:background="@color/light_grey"/>
+    <TextView
+        android:id="@+id/bt_commit"
+        android:layout_below="@id/et_input"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:text="确认"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-</LinearLayout>
+</RelativeLayout>
