--- a/app/src/main/res/layout/fragment_search_key_result.xml
+++ b/app/src/main/res/layout/fragment_search_key_result.xml
@@ -2,5 +2,11 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <ScrollView
+        android:id="@+id/search_scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ScrollView>
+
 
 </android.support.constraint.ConstraintLayout>
