--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -7,7 +7,7 @@
             />
         <item
             android:id="@+id/nav_location"
-            android:title="@string/nav_location"
+            android:title="发布"
             />
         <item
             android:id="@+id/nav_cardTest"
